# activation_tracker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
activation_tracker/: activation.py  model.py
examples/: simple_usage.py
src/activation_tracker/: __init__.py  activation.py  model.py
tests/: activation_test.py  model_test.py  test_activation.py  test_model.py
