[tool.poetry]
name = "activation-tracker"
version = "0.1.0"
description = ""
authors = ["plachert <pmlachert@gmail.com>"]
readme = "README.md"
packages = [{include = "activation_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
