[tool.poetry]
name = "activation-tracker"
version = "0.1.0"
description = ""
authors = ["plachert <pmlachert@gmail.com>"]
readme = "README.md"
packages = [{include = "activation_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system.git]
commit = "HEAD"
repository = "https://github.com/plachert/activation_tracker.git"
