[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "activation_tracker"
version = "1.0.0"
description = "Tools for accessing and filtering activations in a Torch nn.Module."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Piotr Lachert", email = "pmlachert@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 2.0.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=4.0.2",
    "build",
]
